# cargo-env-run

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
